syntax = "proto3";

package auth;

message UserModel {
  int32 id = 1;
  string name = 2;
  string email = 3;
}
message RegisterRequest {
  string email = 1;
  string password = 2;
  string userName = 3;
}
message RegisterResponse {
  UserModel user = 1;
  string token = 2;
}
message LoginRequest {
  string email = 1;
  string password = 2;
}
message LoginResponse {
  UserModel user = 1;
  string token = 2;
}
service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc register(RegisterRequest) returns (RegisterResponse);
}